Added a patch for build failures in FreeBSD 12.0-CURRENT (osreldate 1200079).

Reference bug in Firefox: https://bugzilla.mozilla.org/show_bug.cgi?id=1444953